--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,40 @@
 spring:
   application:
     name: client-01 # 对外暴露的服务名称
+  profiles:
+    active: test
 
-  kafka:
-    bootstrap-servers: 192.168.188.128:9092
-    producer:
-      retries: 5
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      batch-size: 100
-      buffer-memory: 33554432
+#  kafka:
+#    bootstrap-servers: 192.168.188.128:9092
+#    producer:
+#      retries: 5
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      batch-size: 100
+#      buffer-memory: 33554432
 server:
   port: 8552
 
+---
+spring:
+  profiles: dev
 
-# 客户端注册进eureka服务列表里
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://127.0.0.1:7001/eureka/
-  instance:
-    instanceId: client-01
-    preferIpAddress: true
+kouhao: kou-dev
 
-# 用来展示项目的基本信息
-info:
-  author.name: hao.kou
-  app.name: client-01
-  server.port: ${server.port}
-  application.name: ${spring.application.name}
+---
+spring:
+  profiles: master
+
+kouhao: kou-master
+
+---
+spring:
+  profiles: test
+
+kouhao: kou-test
+
+
+
 
 
 
