--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,11 +1,13 @@
+# 客户端注册进eureka服务列表里
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:7001/eureka/
+      defaultZone: http://root:root@127.0.0.1:7001/eureka/
   instance:
     instanceId: client-01
     preferIpAddress: true
 
+#config-server
 spring:
   cloud:
     config:
@@ -16,3 +18,10 @@ spring:
       name: spring-config  # 对应{application}部分
       profile: master  # 对应{profile}部分
       label: master  # 对应git的分支，如果配置中心使用的是本地存储，则该参数无用
+
+# 用来展示项目的基本信息
+info:
+  author.name: hao.kou
+  app.name: client-01
+  server.port: ${server.port}
+  application.name: ${spring.application.name}
